# proportionate

./: CMakeLists.txt  README.md  meson.build
data/: aspect-ratio-copy.appdata.xml  com.example.AspectRatioCopy.gresource.xml  window.ui
src/: main.c
